--- a/.gitignore
+++ b/.gitignore
@@ -148,3 +148,10 @@ include/soc/oplus/oplus_wakelock_profiler.h
 
 # ignore net/oplus_modules
 net/oplus_modules
+
+# Ignore output dir
+/out
+
+# Ignore build script
+/horizon_build.sh
+compile_commands.json
