net: wireless: realtek: Add RTL8812BU driver
Signed-off-by: lateautumn233 <3487467850@qq.com>

--- a/drivers/net/wireless/realtek/Kconfig
+++ b/drivers/net/wireless/realtek/Kconfig
@@ -16,5 +16,6 @@ source "drivers/net/wireless/realtek/rtlwifi/Kconfig"
 source "drivers/net/wireless/realtek/rtl8xxxu/Kconfig"
 source "drivers/net/wireless/realtek/rtl8188eus/Kconfig"
 source "drivers/net/wireless/realtek/rtl8814au/Kconfig"
+source "drivers/net/wireless/realtek/rtl8812bu/Kconfig"
 
 endif # WLAN_VENDOR_REALTEK
