mm: uksm: Allow set max UKSM sleep time to 60s

--- a/mm/Kconfig
+++ b/mm/Kconfig
@@ -367,6 +367,10 @@ config UKSM_CPU_GOVERNOR
 	3: quiet
 	4: android
 
+config UKSM_SLEEP_MS
+	int "Ultra-KSM default sleep millisecs"
+	range 8 60000
+
 endif
 
 config DEFAULT_MMAP_MIN_ADDR
