actions: use nethunter_defconfig

--- a/.github/workflows/build-oneplus-sm8250-kernel.yml
+++ b/.github/workflows/build-oneplus-sm8250-kernel.yml
@@ -9,7 +9,7 @@ jobs:
       CCACHE_NOHASHDIR: "true"
       CCACHE_MAXSIZE: "2G"
       CCACHE_HARDLINK: "true"
-      KERNEL_DEFCONFIG: "vendor/kona-perf_defconfig"
+      KERNEL_DEFCONFIG: "nethunter_defconfig"
       KERNEL_CMDLINE: "ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- CROSS_COMPILE_ARM32=arm-linux-gnueabi- LLVM=1 LLVM_IAS=1 O=out"
     steps:
     - name: Checkout
