--- a/arch/arm64/configs/nethunter_defconfig
+++ b/arch/arm64/configs/nethunter_defconfig
@@ -1037,3 +1037,4 @@ CONFIG_CORESIGHT_DUMMY=y
 CONFIG_CORESIGHT_REMOTE_ETM=y
 CONFIG_CORESIGHT_TGU=y
 CONFIG_DOCKER=y
+# CONFIG_ANDROID_PARANOID_NETWORK is not set
