--- a/.github/workflows/build-oneplus-sm8250-kernel.yml
+++ b/.github/workflows/build-oneplus-sm8250-kernel.yml
@@ -1,5 +1,15 @@
-name: Build OnePlus-Sm8250-Kernel
-on: [push, pull_request]
+name: Build OnePluss-Sm8250-Kernel
+on:
+  workflow_dispatch:
+  schedule:
+      # Run once a week on Sunday at midnight. See http://crontab.guru
+      - cron: '0 21 * * *'
+  push:
+    branches:
+      - HEAD
+  pull_request:
+      branches:
+      - HEAD
 
 jobs:
   build:
